update name after song finish